--- a/Homework_1/Kttc/tanki.html
+++ b/Homework_1/Kttc/tanki.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="https://kttc.ru/favicon.png?v3">
+    <link rel="stylesheet" href="styles/content.css">
     <title>Лучшие игроки и кланы. KTTC - Как только, так сразу. Сессионная статистика World of Tanks.</title>
 
     <style>
